# serializer version: 1
# name: TestQuadXTrackingCostEqual.test_snapshot
  -0.0055462600926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.1
  0.0026603582032
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.10
  -2.7289e-09
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.100
  0.0002314260664
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.101
  -0.0005268208639
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.102
  0.9420203026474
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.103
  -2.3366309591134
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.104
  -0.3117343460441
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.105
  -0.8117999558004
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.106
  0.7414119910789
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.107
  0.5516333406708
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.108
  0.8586115917293
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.109
  0.8183595082831
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.11
  1.02375e-08
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.110
  0.7130720721537
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.111
  0.1175373974578
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.112
  -0.9930684569549
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.113
  1.0117766126774
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.114
  -0.1173059713914
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.115
  0.992541636091
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.116
  -0.06975631003
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.117
  1.0018809974679
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.118
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.119
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.12
  0.9681224473745
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.120
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.121
  0.942116505078
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.122
  2.7529356150198
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.123
  -0.6367467168995
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.124
  -0.0527336655245
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.125
  0.0160796483257
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.126
  0.0150332883709
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.127
  0.9983659678048
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.128
  0.0255841040446
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.129
  0.0257673178296
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.130
  0.7517916855545
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.131
  0.0013943159926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.132
  0.0016747970575
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.133
  0.9597564148563
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.134
  0.9039312087065
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.135
  2.0279710262249
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.136
  -0.3555390745231
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.137
  0.1817909774278
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.138
  0.1279109990085
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.139
  0.1453538153817
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.140
  0.2602182587865
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.141
  0.4227309790298
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.142
  0.1564344650402
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.143
  -0.9876883405951
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.144
  1.0156976298823
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.145
  -0.1550401490476
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.146
  0.9893631376527
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.147
  -0.055941215026
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.148
  1.0029986468093
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.149
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.150
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.151
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.152
  1.6785156035716
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.153
  -4.7688442123744
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.154
  3.1750605172291
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.155
  -0.0384294204542
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.156
  0.0085241954369
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.157
  0.0329118665708
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.158
  0.9986827958739
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.159
  0.0579519899337
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.160
  0.072838812168
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.161
  0.9101003476983
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.162
  0.0027966981947
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.163
  0.0048391756589
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.164
  0.9797715041572
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.165
  0.3429663317734
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.166
  -2.7406170076915
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.167
  2.0585673660378
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.168
  0.5053315192977
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.169
  0.5200128548787
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.17
  0.0504498315889
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.170
  0.3339532255999
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.171
  0.5919040563199
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.172
  0.5236632956297
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.173
  0.1950903220161
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.174
  -0.9807852804032
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.175
  1.019614773932
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.176
  -0.1922936238214
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.177
  0.9856244560621
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.178
  -0.0398432697747
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.179
  1.0049974588507
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.18
  0.0511314130747
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.180
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.181
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.182
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.19
  0.0489284996549
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.2
  0.0014850074979
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.20
  0.0491534134335
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.21
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.22
  -1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.23
  1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.24
  -2.7289e-09
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.25
  1.0000000102375
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.26
  -0.0318775526255
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.27
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.28
  2.735040642528
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.29
  -1.1522096441232
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.3
  -9.95833836e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.30
  3.0068916952955
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.31
  0.0165307213117
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.32
  -0.0077771888074
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.33
  0.0167294393779
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.34
  0.9996931411415
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.35
  -0.0119015956622
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.36
  -0.0239866178159
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.37
  -0.6864391289097
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.38
  -4.6086366e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.39
  -8.2299012e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.4
  -5.7537558e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.40
  0.9488315866091
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.41
  1.7213166190998
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.42
  -0.3840380893018
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.43
  2.2531371815724
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.44
  0.5578944232475
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.45
  0.4152636366719
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.46
  0.4720171802264
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.47
  0.6176299184521
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.48
  0.6110930263573
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.49
  0.0392598157591
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.5
  1.6838243e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.50
  -0.9992290362407
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.51
  1.003926829328
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.52
  -0.0392644243957
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.53
  0.9992208063395
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.54
  -0.0550952427189
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.55
  1.0015085624272
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.56
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.57
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.58
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.59
  -6.3347310686358
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.6
  0.9999999948833
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.60
  4.7753342794721
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.61
  1.2205149011511
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.62
  -0.0106037272637
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.63
  0.0212832795302
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.64
  0.0513481434144
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.65
  0.9983976918786
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.66
  -0.0018326188579
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.67
  -0.0238574120595
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.68
  -0.217962246622
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.69
  -0.0001558838749
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.7
  -8.9293644e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.70
  -0.0004124952471
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.71
  0.9379605368636
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.72
  -2.549858925073
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.73
  2.9884233715703
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.74
  1.640789138667
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.75
  0.6288514442216
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.76
  0.7424261971998
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.77
  0.7429703122754
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.78
  0.5439640174849
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.79
  0.498729505904
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.8
  0.0001527112002
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.80
  0.0784590957278
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.81
  -0.9969173337331
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.82
  1.0078526897695
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.83
  -0.0786149796028
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.84
  0.9965048384861
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.85
  -0.0698921529059
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.86
  1.0020414767773
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.87
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.88
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.89
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.9
  -0.7635167337801
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.90
  -1.1476960240923
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.91
  -3.1948499681914
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.92
  -2.6575230680436
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.93
  -0.0700819867092
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.94
  0.0125502861371
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.95
  0.0355211072145
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.96
  0.9968296024893
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.97
  0.0261337952242
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.98
  -0.0331935941958
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.99
  0.4725679847222
# ---
